[package]
name = "md5_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
md-5 = "0.10.6"
once_cell = "1.18.0"
regex = "1.10.2"

[features]
perf = []
time = ["perf"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
